--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-   <head>
+    <header class="header">
         <h1>Test</h1>
-   </head> 
-   <main>
-        <h1>Main</h1>
-   </main>
-   <footer>
-        <h1>Footer</h1>
-   </footer>
+
+    </header>
 </body>
 </html>
