--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
         <h1>Test</h1>
 
     </header>
+    <main>
+        <img src="./images/Skor.jpg" alt="img-test" >
+    </main>
     <script src="js/main.min.js"></script>
 </body>
 </html>
