--- a/src/stab.html
+++ b/src/stab.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>DAT</title>
-        <link rel="icon" type="image/x-icon" href="/files/Vector.svg" />
+        <link rel="icon" type="image/x-icon" href="img/Vector.svg" />
 
-        <link rel="stylesheet" href="css/style.min.css" />
+        <link rel="stylesheet" href="css/main.min.css" />
     </head>
     <body class="page-body">
 
@@ -14,6 +14,6 @@
         @@include('./components/blocks/stab/_stab.html')
         @@include('./components/blocks/footer/_footer.html')
 
-        <script src="js/app.min.js"></script>
+        <script src="js/main.min.js"></script>
     </body>
 </html>
