--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     
     <body class="page-body">
 
-        @@include('./components/blocks/header/_header.html')
+        <!-- @@include('./components/blocks/header/_header.html') -->
         @@include('./components/blocks/main/_main.html')
         <!-- @@include('./components/blocks/footer/_footer.html') -->
 
