--- a/src/catalog.html
+++ b/src/catalog.html
@@ -4,17 +4,16 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>DAT</title>
-        <link rel="icon" type="image/x-icon" href="img/Vector.svg" />
+        <!-- <link rel="icon" type="image/x-icon" href="/files/Vector.svg" /> -->
 
         <link rel="stylesheet" href="css/main.min.css" />
     </head>
     <body class="page-body">
-        @@include('./components/blocks/header/_header.html')
-        <main class="p">
-            @@include('./components/blocks/catalog/_catolog.html')
-        </main>
 
-            @@include('./components/blocks/footer/_footer.html')
+        <!-- @@include('./parts/header/_header.html') -->
+        <!-- @@include('./parts/catalog-main/_catolog-main.html') -->
+        <!-- @@include('./parts/footer/_footer.html') -->
+
         <script src="js/main.min.js"></script>
     </body>
 </html>
